Corrige problema com innerHTML

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="container-fluid">
-        <ul id="listaRepositorios" class="list-group">
-            <li id="descricaoUsuario" class="list-group-item list-group-item-dark text-center">
+        <ul id="listaRepositorios" class="list-group mb-5">
+            <li id="descricaoUsuario" class="list-group-item list-group-item-dark text-center mt-3">
                 <i class="fab fa-github"></i> </li>
             <!-- <li class="list-group-item">Repositório 1</li>
             <li class="list-group-item">Repositório 2</li>
