--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </div> -->
 
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <h5 class="text-light p-3"><i class="fab fa-github"></i> Buscador de Repositórios</h5>
+    </nav>
     <div class="container-fluid mt-5 mb-3">
         <div class="input-group mb-3">
             <input id="inputPesquisa" type="text" class="form-control"
