--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <h5 class="text-light p-3"><i class="fab fa-github"></i> Buscador de Repositórios</h5>
+        <h5 class="text-light p-3"><i class="fab fa-github mr-2"></i> Buscador de Repositórios</h5>
     </nav>
     <div class="container-fluid mt-5 mb-3">
         <div class="input-group mb-3">
