--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/220aa7b086.js"></script>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
