--- a/index.html
+++ b/index.html
@@ -1,46 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Buscar Repositórios no Github</title>
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<!-- <div class="spinner-border text-secondary" role="status">
-  <span class="sr-only">Loading...</span>
+  <!-- <div class="spinner-border text-secondary" role="status">
 </div> -->
 
-<body>
+  <body>
     <nav class="navbar navbar-dark bg-dark">
-        <h5 class="text-light p-3"><i class="fab fa-github mr-2"></i> Buscador de Repositórios</h5>
+      <h5 class="text-light p-3">
+        <i class="fab fa-github mr-2"></i> Buscador de Repositórios
+      </h5>
     </nav>
-    <div class="container-fluid mt-5 mb-3">
-        <div class="input-group mb-3">
-            <input id="inputPesquisa" type="text" class="form-control"
-                placeholder="Digite o nome de um usuário do GitHub">
-            <div class="input-group-append">
-                <button id="btnPesquisa" class="btn btn-outline-secondary" type="button" id="btnPesquisar"
-                    onclick="buscarRepositorio()"> <i class="fas fa-search"></i><strong> Pesquisar</strong></button>
-            </div>
+
+    <div class="container-fluid mt-3">
+      <div class="input-group">
+        <input
+          id="inputPesquisa"
+          type="text"
+          class="form-control"
+          placeholder="Digite o nome de um usuário do GitHub"
+        />
+        <div class="input-group-append">
+          <button
+            id="btnPesquisa"
+            class="btn btn-outline-secondary"
+            type="button"
+            id="btnPesquisar"
+            onclick="buscarRepositorio()"
+          >
+            <i class="fas fa-search"></i><strong> Pesquisar</strong>
+          </button>
         </div>
+      </div>
     </div>
 
-    <div class="container-fluid">
-        <ul id="listaRepositorios" class="list-group mb-5">
-            <li id="descricaoUsuario" class="list-group-item list-group-item-dark text-center mt-3">
-                <i class="fab fa-github"></i> </li>
-        </ul>
+    <div class="container-fluid card mt-3 mb-3" style="max-width: 600px;">
+      <div class="row no-gutters">
+        <div class="col-md-4 mt-2">
+          <img
+            src="./assets/Perfil.jpeg"
+            width="20%"
+            height="80%"
+            class="card-img"
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body mb-2">
+            <h5 class="card-title" style="margin-top: 3rem;">
+              Título
+            </h5>
+            <p>Descrição</p>
+            <p class="card-text">
+              <a class="text-muted" href="#"
+                >Clique para ver os repositórios deste usuário.</a
+              >
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion container-fluid" id="accordionExample">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button
+                  class="btn btn-link"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  Collapsible Group Item #1
+                </button>
+              </h2>
+            </div>
+
+            <div
+              id="collapseOne"
+              class="collapse"
+              aria-labelledby="headingOne"
+              data-parent="#accordionExample"
+            >
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life
+                accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                non cupidatat skateboard dolor brunch. Food truck quinoa
+                nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua
+                put a bird on it squid single-origin coffee nulla assumenda
+                shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
+                wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur butcher vice lomo. Leggings occaecat craft beer
+                farm-to-table, raw denim aesthetic synth nesciunt you probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <ul id="listaRepositorios" class="list-group mb-5">
+            <li
+              id="descricaoUsuario"
+              class="list-group-item list-group-item-dark text-center"
+            >
+              <i class="fab fa-github"></i>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/220aa7b086.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
