--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
     <div class="container-fluid card mt-3 mb-3" style="max-width: 600px;">
       <div class="row no-gutters">
         <div class="col-md-4 mt-2">
-          <img
-            src="./assets/Perfil.jpeg"
-            width="20%"
-            height="80%"
-            class="card-img"
-          />
+          <img src="./assets/Perfil.jpeg" height="80%" class="card-img" />
         </div>
         <div class="col-md-8">
           <div class="card-body mb-2">
@@ -74,8 +69,6 @@
                   type="button"
                   data-toggle="collapse"
                   data-target="#collapseOne"
-                  aria-expanded="true"
-                  aria-controls="collapseOne"
                 >
                   Collapsible Group Item #1
                 </button>
@@ -85,7 +78,6 @@
             <div
               id="collapseOne"
               class="collapse"
-              aria-labelledby="headingOne"
               data-parent="#accordionExample"
             >
               <div class="card-body">
